turning in updated ui3 project

--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -1,10 +1,11 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
-  <title>Great Idea!</title>
+  <title>Great Idea! - Services</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
@@ -15,92 +16,173 @@
 </head>
 
 <body>
+  <header class="header-section">
+
+    <div class="container2">
+
+      <nav class="nav-bar">
+        <ul>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Product</a></li>
+          <li><a href="#">Vision</a></li>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+          <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+        </ul>
+      </nav>
 
 
-Services
-Product
-Vision
-Features
-About
-Contact
+      <div class="services-header">
 
-<img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+        <div class="services-img">
+          <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
+        </div>
 
-
-<img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
-
-Services
-
-Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
-
-
-Digital Design
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
+        <h1>Services</h1>
+        <p>
+          Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus
+          rutrum,
+          accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et
+          justo
+          eu
+          consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
+        </p>
 
 
+      </div>
+  </header>
 
-UX / UI
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
+  <hr color="black">
 
 
+  <section class="middle-page">
 
-Digital Marketing
+    <div class="middle-page-box">
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+      <h1>Digital Design</h1>
+      <p>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus
+        nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </p>
+      <button>Learn More</button>
 
-Learn More
+    </div>
 
+    <div class="middle-page-box">
 
+      <h1>UX / UI</h1>
+      <p>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus
+        nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </p>
+      <button>Learn More</button>
 
-Web Development
+    </div>
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+    <div class="middle-page-box">
 
-Learn More
+      <h1>Digital Marketing</h1>
+      <p>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus
+        nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </p>
+      <button>Learn More</button>
 
+    </div>
 
+    <div class="middle-page-box">
 
-iOS Development
+      <h1>Web Development</h1>
+      <p>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus
+        nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </p>
+      <button>Learn More</button>
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+    </div>
 
-Learn More
+    <div class="middle-page-box">
 
+      <h1>iOS Development</h1>
+      <p>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus
+        nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </p>
+      <button>Learn More</button>
 
+    </div>
 
-Android Development
+    <div class="middle-page-box">
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+      <h1>Android Development</h1>
+      <p>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus
+        nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </p>
+      <button>Learn More</button>
+    </div>
 
-Learn More
+  </section>
 
+  <hr color="black">
 
-Some Facts About Our Services
+  <footer class="bottom-of-page">
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+    <div class="footer-bottom-stuff">
 
+      <h1>Some Facts About Our Services</h1>
+      <p>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus
+        nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </p>
 
-Awesome thing
-Amazing thing
-Cool thing
-Great thing
+      <ol class="list">
+        <li>Awesome thing</li>
+        <li>Amazing thing</li>
+        <li>Cool thing</li>
+        <li>Great thing</li>
+      </ol>
 
-<img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+    </div>
 
-Copyright Great Idea! 2018
+    <div class="footer-image">
+      <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+    </div>
+
+  </footer>
+
+  <div class="copyright-bottom">
+    <p>Copyright Great Idea! 2018</p>
+  </div>
 
 </body>
 
