--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -28,8 +28,8 @@
           <li><a href="#">Features</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
+          <li><img class="logo" src="img/logo.png" alt="Great Idea! Company logo." /></li>
         </ul>
-        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
       </nav>
 
       <div class="caption">
